--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h1>Courses > </h1><p class="coursedtl">Courses Details</p>
             </div>
             <div class="imageContainer">
-                <img src="/gggg.jpg" alt="hj" />
+                <img src="gggg.jpg" alt="hj" />
             </div>
             <div class="titleContainer">
                 <h1 class="title">
